Many small fixes
Postcode ordered correctly
Phone number link corrected
Maps link corrected
Capital in title + product names (eng)
"blommogram-tjänst" -> "blommogramtjänst"
Unit of prices changed to sek (eng) + fixed space between price and unit

--- a/_templates/pages/products.html
+++ b/_templates/pages/products.html
@@ -14,9 +14,9 @@
         <div class="centerInfo textSmall fontInter">
             <div class="sortingOptions">
                 <label class="vatButton textExtraSmall">
-                !!!SHOW_PRICE_WITHOUT_VAT!!!
-                <input type="checkbox" class="vatCheckbox" id="toggleVAT"> 
-            </label>
+                    !!!SHOW_PRICE_WITHOUT_VAT!!!
+                    <input type="checkbox" class="vatCheckbox" id="toggleVAT">
+                </label>
             </div>
             <div class="productsPage">
                 <div class="product">
@@ -26,7 +26,7 @@
                     </div>
                     <div class="priceTag">
                         <div>
-                            <span>100</span>kr
+                            <span>100</span> !!!PRICE_UNIT!!!
                         </div>
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                     </div>
                     <div class="priceTag">
                         <div>
-                            <span>150</span>kr
+                            <span>150</span> !!!PRICE_UNIT!!!
                         </div>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                             !!!FROM!!!
                         </div>
                         <div>
-                            <span>400</span>kr
+                            <span>400</span> !!!PRICE_UNIT!!!
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                             !!!FROM!!!
                         </div>
                         <div>
-                            <span>800</span>kr
+                            <span>800</span> !!!PRICE_UNIT!!!
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                             !!!FROM!!!
                         </div>
                         <div>
-                            <span>1200</span>kr
+                            <span>1200</span> !!!PRICE_UNIT!!!
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                             !!!FROM!!!
                         </div>
                         <div>
-                            <span>200</span>kr
+                            <span>200</span> !!!PRICE_UNIT!!!
                         </div>
                     </div>
                 </div>
@@ -104,4 +104,5 @@
     <script src="toggle_vat.js"></script>
     !!!JS!!!
 </body>
+
 </html>
