--- a/website/about_us_english.html
+++ b/website/about_us_english.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -63,106 +63,106 @@
             </div>
         </div>
         <footer class="textSmall textLight fontInter">
-            <div class="openingHoursInfo">
-                <table class="openingHoursTable">
-                    <thead class="textMedium fontProza fontBold">
-                        <tr>
-                            <th>
-                                Day
-                            </th>
-                            <th>
-                                Opening hours
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                Monday
-                            </td>
-                            <td>
-                                10-16
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Tuesday
-                            </td>
-                            <td>
-                                10-16
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Wednesday
-                            </td>
-                            <td>
-                                12-18
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Thursday
-                            </td>
-                            <td>
-                                10-16
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Friday
-                            </td>
-                            <td>
-                                10-16
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Saturday
-                            </td>
-                            <td>
-                                12-15
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Sunday
-                            </td>
-                            <td>
-                                CLOSED
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="divider"></div>
-            <div class="aboutUsInfo">
-                <div class="textMedium fontProza fontBold">
-                    Delikat Flora
-                </div>
-                <a href="about_us_english.html">About us</a>
-            </div>
-            <div class="divider"></div>
-            <div class="contactInfo">
-                <div class="textMedium fontProza fontBold">
-                    Contact information
-                </div>
-                <p>
-                    <a href="tel:+0630555555">0630 555 555</a>
-                </p>
-                <p>
-                    <a href="mailto:info@github.pages.io">info@github.pages.io</a>
-                </p>
-                <p>
-                    <a href="https://www.google.com/maps?q=Fjällgatan_32H_981_39_Finspång" target="_blank">
-                        Fjällgatan 32H 981 39 Finspång
-                    </a>
-                </p>
-                <div class="logo textMediumLarge textLogo">
-                    F
-                </div>
-            </div>
-        </footer>
+    <div class="openingHoursInfo">
+        <table class="openingHoursTable">
+            <thead class="textMedium fontProza fontBold">
+                <tr>
+                    <th>
+                        Day
+                    </th>
+                    <th>
+                        Opening hours
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        Monday
+                    </td>
+                    <td>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Tuesday
+                    </td>
+                    <td>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Wednesday
+                    </td>
+                    <td>
+                        12-18
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Thursday
+                    </td>
+                    <td>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Friday
+                    </td>
+                    <td>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Saturday
+                    </td>
+                    <td>
+                        12-15
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Sunday
+                    </td>
+                    <td>
+                        CLOSED
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="divider"></div>
+    <div class="aboutUsInfo">
+        <div class="textMedium fontProza fontBold">
+            Delikat Flora
+        </div>
+        <a href="about_us_english.html">About us</a>
+    </div>
+    <div class="divider"></div>
+    <div class="contactInfo">
+        <div class="textMedium fontProza fontBold">
+            Contact information
+        </div>
+        <p>
+            <a href="tel:+46630555555">0630 555 555</a>
+        </p>
+        <p>
+            <a href="mailto:info@github.pages.io">info@github.pages.io</a>
+        </p>
+        <p>
+            <a href="https://www.google.com/maps?q=Fjällgatan+32H+981+39+Finspång" target="_blank">
+                Fjällgatan 32H 981 39 Finspång
+            </a>
+        </p>
+        <div class="logo textMediumLarge textLogo">
+            F
+        </div>
+    </div>
+</footer>
     </main>
     <script src="drop_down_button.js"></script>
 
