--- a/website/products_english.html
+++ b/website/products_english.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our products</title>
+    <title>Our Products</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -46,9 +46,9 @@
         <div class="centerInfo textSmall fontInter">
             <div class="sortingOptions">
                 <label class="vatButton textExtraSmall">
-                Show prices without VAT
-                <input type="checkbox" class="vatCheckbox" id="toggleVAT"> 
-            </label>
+                    Show prices without VAT
+                    <input type="checkbox" class="vatCheckbox" id="toggleVAT">
+                </label>
             </div>
             <div class="productsPage">
                 <div class="product">
@@ -58,7 +58,7 @@
                     </div>
                     <div class="priceTag">
                         <div>
-                            <span>100</span>kr
+                            <span>100</span> sek
                         </div>
                     </div>
                 </div>
@@ -69,172 +69,173 @@
                     </div>
                     <div class="priceTag">
                         <div>
-                            <span>150</span>kr
+                            <span>150</span> sek
                         </div>
                     </div>
                 </div>
                 <div class="product">
                     <img src="images/autumn_bouquet.jpg" alt="">
                     <div class="productDescription">
-                        Autumn bouquet
+                        Autumn Bouquet
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
                             From:
                         </div>
                         <div>
-                            <span>400</span>kr
+                            <span>400</span> sek
                         </div>
                     </div>
                 </div>
                 <div class="product">
                     <img src="images/funeral_wreath.jpg" alt="">
                     <div class="productDescription">
-                        Funeral wreath
+                        Funeral Wreath
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
                             From:
                         </div>
                         <div>
-                            <span>800</span>kr
+                            <span>800</span> sek
                         </div>
                     </div>
                 </div>
                 <div class="product">
                     <img src="images/wedding_bouquet.jpg" alt="">
                     <div class="productDescription">
-                        Wedding bouquet
+                        Wedding Bouquet
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
                             From:
                         </div>
                         <div>
-                            <span>1200</span>kr
+                            <span>1200</span> sek
                         </div>
                     </div>
                 </div>
                 <div class="product">
                     <img src="images/summer_bouquet.jpg" alt="">
                     <div class="productDescription">
-                        Summer bouquet
+                        Summer Bouquet
                     </div>
                     <div class="priceTag">
                         <div class="textGreyish">
                             From:
                         </div>
                         <div>
-                            <span>200</span>kr
+                            <span>200</span> sek
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <footer class="textSmall textLight fontInter">
-            <div class="openingHoursInfo">
-                <table class="openingHoursTable">
-                    <thead class="textMedium fontProza fontBold">
-                        <tr>
-                            <th>
-                                Day
-                            </th>
-                            <th>
-                                Opening hours
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>
-                                Monday
-                            </td>
-                            <td>
-                                10-16
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Tuesday
-                            </td>
-                            <td>
-                                10-16
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Wednesday
-                            </td>
-                            <td>
-                                12-18
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Thursday
-                            </td>
-                            <td>
-                                10-16
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Friday
-                            </td>
-                            <td>
-                                10-16
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Saturday
-                            </td>
-                            <td>
-                                12-15
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                Sunday
-                            </td>
-                            <td>
-                                CLOSED
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="divider"></div>
-            <div class="aboutUsInfo">
-                <div class="textMedium fontProza fontBold">
-                    Delikat Flora
-                </div>
-                <a href="about_us_english.html">About us</a>
-            </div>
-            <div class="divider"></div>
-            <div class="contactInfo">
-                <div class="textMedium fontProza fontBold">
-                    Contact information
-                </div>
-                <p>
-                    <a href="tel:+0630555555">0630 555 555</a>
-                </p>
-                <p>
-                    <a href="mailto:info@github.pages.io">info@github.pages.io</a>
-                </p>
-                <p>
-                    <a href="https://www.google.com/maps?q=Fjällgatan_32H_981_39_Finspång" target="_blank">
-                        Fjällgatan 32H 981 39 Finspång
-                    </a>
-                </p>
-                <div class="logo textMediumLarge textLogo">
-                    F
-                </div>
-            </div>
-        </footer>
+    <div class="openingHoursInfo">
+        <table class="openingHoursTable">
+            <thead class="textMedium fontProza fontBold">
+                <tr>
+                    <th>
+                        Day
+                    </th>
+                    <th>
+                        Opening hours
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        Monday
+                    </td>
+                    <td>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Tuesday
+                    </td>
+                    <td>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Wednesday
+                    </td>
+                    <td>
+                        12-18
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Thursday
+                    </td>
+                    <td>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Friday
+                    </td>
+                    <td>
+                        10-16
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Saturday
+                    </td>
+                    <td>
+                        12-15
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Sunday
+                    </td>
+                    <td>
+                        CLOSED
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="divider"></div>
+    <div class="aboutUsInfo">
+        <div class="textMedium fontProza fontBold">
+            Delikat Flora
+        </div>
+        <a href="about_us_english.html">About us</a>
+    </div>
+    <div class="divider"></div>
+    <div class="contactInfo">
+        <div class="textMedium fontProza fontBold">
+            Contact information
+        </div>
+        <p>
+            <a href="tel:+46630555555">0630 555 555</a>
+        </p>
+        <p>
+            <a href="mailto:info@github.pages.io">info@github.pages.io</a>
+        </p>
+        <p>
+            <a href="https://www.google.com/maps?q=Fjällgatan+32H+981+39+Finspång" target="_blank">
+                Fjällgatan 32H 981 39 Finspång
+            </a>
+        </p>
+        <div class="logo textMediumLarge textLogo">
+            F
+        </div>
+    </div>
+</footer>
     </main>
     <script src="toggle_vat.js"></script>
     <script src="drop_down_button.js"></script>
 
 </body>
+
 </html>
