--- a/website/flowergram_english.html
+++ b/website/flowergram_english.html
@@ -65,17 +65,10 @@
         </div>
         <footer class="textSmall textLight fontInter">
     <div class="openingHoursInfo">
+        <div class="textMedium fontProza fontBold">
+            Opening hours
+        </div>
         <table class="openingHoursTable">
-            <thead class="textMedium fontProza fontBold">
-                <tr>
-                    <th>
-                        Day
-                    </th>
-                    <th>
-                        Opening hours
-                    </th>
-                </tr>
-            </thead>
             <tbody>
                 <tr>
                     <td>
