--- a/website/index.html
+++ b/website/index.html
@@ -50,17 +50,10 @@
         </div>
         <footer class="textSmall textLight fontInter">
     <div class="openingHoursInfo">
+        <div class="textMedium fontProza fontBold">
+            Öppettider
+        </div>
         <table class="openingHoursTable">
-            <thead class="textMedium fontProza fontBold">
-                <tr>
-                    <th>
-                        Dag
-                    </th>
-                    <th>
-                        Öppettider
-                    </th>
-                </tr>
-            </thead>
             <tbody>
                 <tr>
                     <td>
