--- a/_templates/modules/footer.html
+++ b/_templates/modules/footer.html
@@ -1,16 +1,9 @@
 <footer class="textSmall textLight fontInter">
     <div class="openingHoursInfo">
+        <div class="textMedium fontProza fontBold">
+            !!!OPENING_HOURS!!!
+        </div>
         <table class="openingHoursTable">
-            <thead class="textMedium fontProza fontBold">
-                <tr>
-                    <th>
-                        !!!DAY!!!
-                    </th>
-                    <th>
-                        !!!OPENING_HOURS!!!
-                    </th>
-                </tr>
-            </thead>
             <tbody>
                 <tr>
                     <td>
