Connected database to website to fetch products
Fetch products from Supabase instead of hardcoding them

--- a/_templates/pages/products.html
+++ b/_templates/pages/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="!!!LANGUAGE!!!">
 
 <head>
     <meta charset="UTF-8">
@@ -19,89 +19,17 @@
                 </label>
             </div>
             <div class="productsPage">
-                <div class="product">
-                    <img src="images/tulips_10pack.jpg" alt="">
-                    <div class="productDescription">
-                        !!!TULIPS!!!
-                    </div>
-                    <div class="priceTag">
-                        <div>
-                            <span>100</span> !!!PRICE_UNIT!!!
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="images/roses_10pack.jpg" alt="">
-                    <div class="productDescription">
-                        !!!ROSES!!!
-                    </div>
-                    <div class="priceTag">
-                        <div>
-                            <span>150</span> !!!PRICE_UNIT!!!
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="images/autumn_bouquet.jpg" alt="">
-                    <div class="productDescription">
-                        !!!AUTUMN_BOUQUET!!!
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            !!!FROM!!!
-                        </div>
-                        <div>
-                            <span>400</span> !!!PRICE_UNIT!!!
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="images/funeral_wreath.jpg" alt="">
-                    <div class="productDescription">
-                        !!!FUNERAL_WREATH!!!
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            !!!FROM!!!
-                        </div>
-                        <div>
-                            <span>800</span> !!!PRICE_UNIT!!!
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="images/wedding_bouquet.jpg" alt="">
-                    <div class="productDescription">
-                        !!!WEDDING_BOUQUET!!!
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            !!!FROM!!!
-                        </div>
-                        <div>
-                            <span>1200</span> !!!PRICE_UNIT!!!
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="images/summer_bouquet.jpg" alt="">
-                    <div class="productDescription">
-                        !!!SUMMER_BOUQUET!!!
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            !!!FROM!!!
-                        </div>
-                        <div>
-                            <span>200</span> !!!PRICE_UNIT!!!
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
         !!!FOOTER!!!
     </main>
     <script src="toggle_vat.js"></script>
+    <script type="module">
+        import { createProducts } from "supabase/products.js";
+        createProducts("!!!LANGUAGE!!!");
+        toggleVAT();
+    </script>
     !!!JS!!!
 </body>
 
