--- a/website/products.html
+++ b/website/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
     <meta charset="UTF-8">
@@ -51,84 +51,7 @@
                 </label>
             </div>
             <div class="productsPage">
-                <div class="product">
-                    <img src="images/tulips_10pack.jpg" alt="">
-                    <div class="productDescription">
-                        10 Tulpaner
-                    </div>
-                    <div class="priceTag">
-                        <div>
-                            <span>100</span> kr
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="images/roses_10pack.jpg" alt="">
-                    <div class="productDescription">
-                        10 Rosor
-                    </div>
-                    <div class="priceTag">
-                        <div>
-                            <span>150</span> kr
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="images/autumn_bouquet.jpg" alt="">
-                    <div class="productDescription">
-                        Höstbukett
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            Från:
-                        </div>
-                        <div>
-                            <span>400</span> kr
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="images/funeral_wreath.jpg" alt="">
-                    <div class="productDescription">
-                        Begravningskrans
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            Från:
-                        </div>
-                        <div>
-                            <span>800</span> kr
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="images/wedding_bouquet.jpg" alt="">
-                    <div class="productDescription">
-                        Bröllopsbukett
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            Från:
-                        </div>
-                        <div>
-                            <span>1200</span> kr
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <img src="images/summer_bouquet.jpg" alt="">
-                    <div class="productDescription">
-                        Sommarbukett
-                    </div>
-                    <div class="priceTag">
-                        <div class="textGreyish">
-                            Från:
-                        </div>
-                        <div>
-                            <span>200</span> kr
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
         <footer class="textSmall textLight fontInter">
@@ -227,6 +150,11 @@
 </footer>
     </main>
     <script src="toggle_vat.js"></script>
+    <script type="module">
+        import { createProducts } from "../supabase/products.js";
+        createProducts("sv");
+        toggleVAT();
+    </script>
     <script src="drop_down_button.js"></script>
 
 </body>
