--- a/_templates/pages/flowergram.html
+++ b/_templates/pages/flowergram.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="!!!LANGUAGE!!!">
 
 <head>
     <meta charset="UTF-8">
@@ -21,10 +21,12 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         !!!SEND_FLOWERS!!!
                     </div>
-                    <input type="text" class="postalCodeInput textSmall fontInter" placeholder="!!!POSTAL_CODE!!!: XXX XX">
-                    <div class="postalCodeOutput textSmall fontInter"> 
+                    <input type="text" class="postalCodeInput textSmall fontInter"
+                        placeholder="!!!POSTAL_CODE!!!: XXX XX">
+                    <div class="postalCodeOutput textSmall fontInter">
                     </div>
-                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter" value="!!!CHECK_POSTAL_CODE!!!">
+                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter"
+                        value="!!!CHECK_POSTAL_CODE!!!">
                     <div class="serviceDescription textSmall fontInter">
                         !!!FLOWERGRAM_DESCRIPTION!!!
                     </div>
