--- a/website/flowergram.html
+++ b/website/flowergram.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
     <meta charset="UTF-8">
@@ -53,10 +53,12 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         Skicka blombuketter med vår blommogramtjänst
                     </div>
-                    <input type="text" class="postalCodeInput textSmall fontInter" placeholder="Postnummer: XXX XX">
-                    <div class="postalCodeOutput textSmall fontInter"> 
+                    <input type="text" class="postalCodeInput textSmall fontInter"
+                        placeholder="Postnummer: XXX XX">
+                    <div class="postalCodeOutput textSmall fontInter">
                     </div>
-                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter" value="Kolla postnummer">
+                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter"
+                        value="Kolla postnummer">
                     <div class="serviceDescription textSmall fontInter">
                         Med vår blommogramtjänst kan du enkelt överraska någon med vackra blommor, levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så sköter vi resten. Perfekt för födelsedagar, högtider eller vardagsglädje.
                     </div>
