--- a/website/flowergram_english.html
+++ b/website/flowergram_english.html
@@ -53,10 +53,12 @@
                     <div class="sendFlowersText textMediumSmall fontProza">
                         Send flower bouquets with our flower delivery service.
                     </div>
-                    <input type="text" class="postalCodeInput textSmall fontInter" placeholder="Postal code: XXX XX">
-                    <div class="postalCodeOutput textSmall fontInter"> 
+                    <input type="text" class="postalCodeInput textSmall fontInter"
+                        placeholder="Postal code: XXX XX">
+                    <div class="postalCodeOutput textSmall fontInter">
                     </div>
-                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter" value="Check postal code">
+                    <input onclick="postalCodeCheck()" type="button" class="confirmButton textSmall fontInter"
+                        value="Check postal code">
                     <div class="serviceDescription textSmall fontInter">
                         With our flower delivery service, you can easily surprise someone with beautiful flowers delivered right to their door. Choose a bouquet, write a personal message, and we’ll take care of the rest. Perfect for birthdays, holidays, or everyday joy.
                     </div>
