Connected postal code check to database
made it take data from the database for postal code check

--- a/_templates/pages/flowergram.html
+++ b/_templates/pages/flowergram.html
@@ -35,7 +35,7 @@
         </div>
         !!!FOOTER!!!
     </main>
-    <script src="!!!CHECK_POSTAL_CODE_JS!!!"></script>
+    <script type="module" src="./supabase/flower_delivery.js"></script>
     !!!JS!!!
 </body>
 
