--- a/website/flowergram.html
+++ b/website/flowergram.html
@@ -160,7 +160,7 @@
     </div>
 </footer>
     </main>
-    <script src="postal_code_check_swedish.js"></script>
+    <script type="module" src="./supabase/flower_delivery.js"></script>
     <script src="drop_down_button.js"></script>
 
 </body>
