Fixed code breaking typo
Added "./" to beginning of import url for the script that pulls products from the database

--- a/website/products.html
+++ b/website/products.html
@@ -151,7 +151,7 @@
     </main>
     <script src="toggle_vat.js"></script>
     <script type="module">
-        import { createProducts } from "supabase/products.js";
+        import { createProducts } from "./supabase/products.js";
         createProducts("sv");
         toggleVAT();
     </script>
