--- a/_templates/pages/products.html
+++ b/_templates/pages/products.html
@@ -26,7 +26,7 @@
     </main>
     <script src="toggle_vat.js"></script>
     <script type="module">
-        import { createProducts } from "supabase/products.js";
+        import { createProducts } from "./supabase/products.js";
         createProducts("!!!LANGUAGE!!!");
         toggleVAT();
     </script>
