--- a/website/products_english.html
+++ b/website/products_english.html
@@ -31,11 +31,12 @@
             </label>
             <div class="dropDownMenu">
                 <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
-                <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
+                <a href="consultation_english.html"
+                    class="products textMediumSmall textLight fontInter">Consultation</a>
                 <a href="flowergram_english.html" class="products textMediumSmall textLight fontInter">Flowergram</a>
             </div>
         </div>
-        
+
         <div class="allServices">
             <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
             <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
@@ -55,103 +56,103 @@
             </div>
         </div>
         <footer class="textSmall textLight fontInter">
-    <div class="openingHoursInfo">
-        <div class="textMedium fontProza fontBold">
-            Opening hours
-        </div>
-        <table class="openingHoursTable">
-            <tbody>
-                <tr>
-                    <td>
-                        Monday
-                    </td>
-                    <td>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Tuesday
-                    </td>
-                    <td>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Wednesday
-                    </td>
-                    <td>
-                        12-18
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Thursday
-                    </td>
-                    <td>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Friday
-                    </td>
-                    <td>
-                        10-16
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Saturday
-                    </td>
-                    <td>
-                        12-15
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Sunday
-                    </td>
-                    <td>
-                        CLOSED
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="divider"></div>
-    <div class="aboutUsInfo">
-        <div class="textMedium fontProza fontBold">
-            Delikat Flora
-        </div>
-        <a href="about_us_english.html">About us</a>
-    </div>
-    <div class="divider"></div>
-    <div class="contactInfo">
-        <div class="textMedium fontProza fontBold">
-            Contact information
-        </div>
-        <p>
-            <a href="tel:+46630555555">0630 555 555</a>
-        </p>
-        <p>
-            <a href="mailto:info@github.pages.io">info@github.pages.io</a>
-        </p>
-        <p>
-            <a href="https://www.google.com/maps?q=Fjällgatan+32H+981+39+Finspång" target="_blank">
-                Fjällgatan 32H 981 39 Finspång
-            </a>
-        </p>
-        <div class="logo textMediumLarge textLogo">
-            F
-        </div>
-    </div>
-</footer>
+            <div class="openingHoursInfo">
+                <div class="textMedium fontProza fontBold">
+                    Opening hours
+                </div>
+                <table class="openingHoursTable">
+                    <tbody>
+                        <tr>
+                            <td>
+                                Monday
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Tuesday
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Wednesday
+                            </td>
+                            <td>
+                                12-18
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Thursday
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Friday
+                            </td>
+                            <td>
+                                10-16
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Saturday
+                            </td>
+                            <td>
+                                12-15
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Sunday
+                            </td>
+                            <td>
+                                CLOSED
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="divider"></div>
+            <div class="aboutUsInfo">
+                <div class="textMedium fontProza fontBold">
+                    Delikat Flora
+                </div>
+                <a href="about_us_english.html">About us</a>
+            </div>
+            <div class="divider"></div>
+            <div class="contactInfo">
+                <div class="textMedium fontProza fontBold">
+                    Contact information
+                </div>
+                <p>
+                    <a href="tel:+46630555555">0630 555 555</a>
+                </p>
+                <p>
+                    <a href="mailto:info@github.pages.io">info@github.pages.io</a>
+                </p>
+                <p>
+                    <a href="https://www.google.com/maps?q=Fjällgatan+32H+981+39+Finspång" target="_blank">
+                        Fjällgatan 32H 981 39 Finspång
+                    </a>
+                </p>
+                <div class="logo textMediumLarge textLogo">
+                    F
+                </div>
+            </div>
+        </footer>
     </main>
     <script src="toggle_vat.js"></script>
     <script type="module">
-        import { createProducts } from "supabase/products.js";
+        import { createProducts } from "./supabase/products.js";
         createProducts("en");
         toggleVAT();
     </script>
