Made a noscript behavior
When javascript is disabled removes access to products, consultation and the flower_delivery service pages. Adds a message box that says that javascript is disabled and has contact information in it.

--- a/_templates/pages/about_us.html
+++ b/_templates/pages/about_us.html
@@ -29,6 +29,19 @@
                     <p>!!!FLORIST!!!</p>
                 </div>
             </div>
+            <noscript>
+                <style>
+                    .allServices,
+                    .dropDown,
+                    header .textLogo {
+                        display: none;
+                    }
+
+                    .welcomeMessage {
+                        margin-top: -20px;
+                    }
+                </style>
+            </noscript>
         </div>
         !!!FOOTER!!!
     </main>
