--- a/_templates/pages/index.html
+++ b/_templates/pages/index.html
@@ -15,6 +15,37 @@
             <div class="welcomeMessage textLarge textDark fontLabrada">
                 !!!WELCOME!!!
             </div>
+            <noscript>
+                <div class="noscriptContainer">
+                    <div class="fontInter noscriptMessage noscriptMessageWarning">
+                        !!!NOSCRIPT_WARNING!!!
+                    </div>
+                    <div class="fontInter noscriptMessage">
+                        !!!NOSCRIPT_MESSAGE!!!
+                    </div>
+                    <div class="fontInter noscriptMessage">
+                        !!!PHONE!!! <a href="tel:+46630555555" class="textDark">0630 555 555</a><br>
+                        Mail: <a href="mailto:info@github.pages.io" class="textDark">info@github.pages.io</a>
+                    </div>
+                </div>
+                <style>
+                    .allServices,
+                    .dropDown,
+                    header .textLogo {
+                        display: none;
+                    }
+
+                    .welcomeMessage {
+                        margin-top: -20px;
+                    }
+
+                    @media screen and (max-width: 900px) {
+                        .welcomeMessage {
+                            margin-top: 0px;
+                        }
+                    }
+                </style>
+            </noscript>
         </div>
         !!!FOOTER!!!
     </main>
