--- a/website/about_us.html
+++ b/website/about_us.html
@@ -61,6 +61,19 @@
                     <p>Florist</p>
                 </div>
             </div>
+            <noscript>
+                <style>
+                    .allServices,
+                    .dropDown,
+                    header .textLogo {
+                        display: none;
+                    }
+
+                    .welcomeMessage {
+                        margin-top: -20px;
+                    }
+                </style>
+            </noscript>
         </div>
         <footer class="textSmall textLight fontInter">
     <div class="openingHoursInfo">
