--- a/website/about_us_english.html
+++ b/website/about_us_english.html
@@ -53,7 +53,7 @@
                 <div class="staffMember">
                     <img src="images/anna_pettersson.jpg" alt="">
                     <p>Anna Pettersson</p>
-                    <p>Hortonoma</p>
+                    <p>Hortologist</p>
                 </div>
                 <div class="staffMember">
                     <img src="images/orjan_johansson.jpg" alt="">
@@ -61,6 +61,19 @@
                     <p>Florist</p>
                 </div>
             </div>
+            <noscript>
+                <style>
+                    .allServices,
+                    .dropDown,
+                    header .textLogo {
+                        display: none;
+                    }
+
+                    .welcomeMessage {
+                        margin-top: -20px;
+                    }
+                </style>
+            </noscript>
         </div>
         <footer class="textSmall textLight fontInter">
     <div class="openingHoursInfo">
