--- a/website/index.html
+++ b/website/index.html
@@ -47,6 +47,37 @@
             <div class="welcomeMessage textLarge textDark fontLabrada">
                 Välkommen till Delikat Flora!
             </div>
+            <noscript>
+                <div class="noscriptContainer">
+                    <div class="fontInter noscriptMessage noscriptMessageWarning">
+                        Du har inte javascript aktiverat i din webbläsare.
+                    </div>
+                    <div class="fontInter noscriptMessage">
+                        Kontakta oss för mer information om våra produkter och tjänster.
+                    </div>
+                    <div class="fontInter noscriptMessage">
+                        Tel: <a href="tel:+46630555555" class="textDark">0630 555 555</a><br>
+                        Mail: <a href="mailto:info@github.pages.io" class="textDark">info@github.pages.io</a>
+                    </div>
+                </div>
+                <style>
+                    .allServices,
+                    .dropDown,
+                    header .textLogo {
+                        display: none;
+                    }
+
+                    .welcomeMessage {
+                        margin-top: -20px;
+                    }
+
+                    @media screen and (max-width: 900px) {
+                        .welcomeMessage {
+                            margin-top: 0px;
+                        }
+                    }
+                </style>
+            </noscript>
         </div>
         <footer class="textSmall textLight fontInter">
     <div class="openingHoursInfo">
